<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lorianns.myapplication.MainActivity">

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="22dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/project_1"
            style="@style/ButtonStyle"
            android:onClick="onClick" />

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/project_2"
            android:onClick="onClick" />

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/project_3"
            android:onClick="onClick" />

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/project_4"
            android:onClick="onClick" />

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/project_5"
            android:onClick="onClick" />

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/project_6"
            android:onClick="onClick" />

    </LinearLayout>

</RelativeLayout>
